	aleweights:  turn down the value of the rook in the opening phase a tad (to try to 
	avoid the bishop + knight vs rook + pawn swaps)
	eval.c:  Rook vs minor piece is a draw

Thu Sep 25 05:53:46 AM EST 2003 ale <s328940@student.uq.edu.au>
	moveorder.h, moveorder.c:  new files.  moved orderMoveList from eval.[ch] to here
	board.h:  Added Killer struct, and killer array to Board struct.
	moveorder.c:  wrote updateKiller, getKiller, and clearKillers.
	negascout.c:  update killers.  clear killers at depth + 1 on new move
	mtdf.c, alphabetasearch.c:  deleted
	search.c, search.h:  remove veryNewAlphaBeta.
	unches.c, cmdline.cli:  get rid of all MTD(f) and Iterative alpha-beta engine options.
	moveorder.c:  Use killer moves for move ordering
	
Thu Sep 25 09:33:02 PM EST 2003 ale <s328940@student.uq.edu.au>
	moveorder.c:  Lower priority of killer moves
	(not seeing an improvement from killer moves, but might as well keep them for now)
	Bump version to 0.6.1 for release
	
Sun Sep 28 11:54:03 PM EST 2003 ale <s328940@student.uq.edu.au>
	WACing at 257/300 at 10seconds now.	

Tue Jul 20 06:26:46 AM EST 2004 Alejandro Dubrovsky <alito@organicrobot.com>
	moveorder.c, negascout.c: Implement divide history table by two when max value reached 
	idea by Tord Romstad.
	
Tue Jul 20 05:00:35 PM EST 2004 Alejandro Dubrovsky <alito@organicrobot.com>	
	aleweights:  give more centering value to queen, rook.  Rook bonus for 6th rank too.
	Don't penalise king so strongly for being on third rank.
	eval.c:  Rough king safety implemented (just looks at the three pawns in front of the
	king and their distances)
	
Tue Aug 10 09:41:32 PM EST 2004 Alejandro Dubrovsky <alito@organicrobot.com>
    eval.c:  Add fianchetto bonus to try to avoid predilection for Kf1/8 when bishop in
    fianchetto
    
Tue 2010/09/13 Alejandro Dubrovsky <alito@organicrobot.com>
    board.h, moveorder.h:  Move a couple of functions to the includes to help get them inlined.
	